--- a/frontend/styles/blocks/site-head.css
+++ b/frontend/styles/blocks/site-head.css
@@ -1,9 +1,6 @@
 body > header nav {
-<<<<<<< HEAD
-=======
   display: flex;
   gap: var(--gutter);
-  /* container: main-nav / inline-size; */
 }
 
 body > header nav ul {
@@ -11,24 +8,6 @@ body > header nav ul {
   gap: var(--gutter);
   list-style: none;
 }
-
-header a {
-  text-decoration: none;
-}
-
-.site-head {
->>>>>>> 837fa1e (some changes)
-  display: flex;
-  gap: var(--gutter);
-  /* container: main-nav / inline-size; */
-}
-
-body > header nav ul {
-  display: flex;
-  gap: var(--gutter);
-  list-style: none;
-}
-<<<<<<< HEAD
 
 header a {
   text-decoration: none;
@@ -41,5 +20,3 @@ header a {
   gap: var(--gutter);
   justify-content: space-between;
 }
-=======
->>>>>>> 837fa1e (some changes)
